--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,12 @@ body {
 *::-webkit-scrollbar-thumb {
     border-radius: 0px;
 }
+
+.timebox {
+    position: absolute;
+    top: calc(50% - 200px);
+    left: calc(50% - 200px);
+    width: 400px;
+    height: 400px;
+    border: 1px solid red;
+}
