--- a/src/components/auth/register/style.scss
+++ b/src/components/auth/register/style.scss
@@ -93,11 +93,11 @@
             height: 30px;
             border-radius: 10px;
             background-color: #4F4E4E;
-            background-image: url('../../assets/closee.svg');
+            background-image: url('../../../assets/closee.svg');
             background-size: contain;
             transition: 0.2s;
             &.active {
-                background-image: url('../../assets/opene.svg');
+                background-image: url('../../../assets/opene.svg');
             }
         }
     }
