--- a/src/components/auth/style.scss
+++ b/src/components/auth/style.scss
@@ -1,11 +1,12 @@
 .auth {
-    position: absolute;
+    position: fixed;
     top: 0;
     box-sizing: border-box;
     width: 100%;
     height: 100%;
     min-height: 500px;
     overflow: hidden;
+    z-index: 30;
     >.authbox {
         display: flex;
         flex-direction: column;
