--- a/src/components/coin/style.scss
+++ b/src/components/coin/style.scss
@@ -1,30 +1,82 @@
 .coinbox {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
     width: 50px;
     height: 50px;
+    position: relative;
     .coinbox2 {
         width: 100%;
         height: 100%;
+        opacity: 1;
+        transition: 0.5s;
         .coin {
             width: 100%;
             height: 100%;
             background-image: url('../../assets/coin.png');
             background-size: contain;
+            filter: drop-shadow(0px 0px 10px rgba(0, 0, 0, 0.5));
             &.var1 {
-                animation: anime 60s infinite;
+                animation: anime 30s infinite;
             }
             &.var2 {
-                animation: anime 75s infinite;
+                animation: anime 37s infinite;
             }
             &.var3 {
-                animation: anime 90s infinite;
+                animation: anime 45s infinite;
             }
             &.var4 {
-                animation: anime 105s infinite;
+                animation: anime 52s infinite;
             }
             &.var5 {
-                animation: anime 120s infinite;
+                animation: anime 60s infinite;
+            }
+            &.img1 {
+                background-image: url('../../assets/coin1.png');
+            }
+            &.img2 {
+                background-image: url('../../assets/coin2.png');
+            }
+            &.img3 {
+                background-image: url('../../assets/coin3.png');
+            }
+            &.img4 {
+                background-image: url('../../assets/coin4.png');
             }
         }
+        &.hide {
+            transition: none;
+            opacity: 0;
+        }
+    }
+    >span.text {
+        font-family: 'Inter';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 16px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translateX(-50%) translateY(-50%);
+        text-align: center;
+        display: flex;
+        align-items: center;
+        >div {
+            height: 30px;
+            width: 30px;
+            background-image: url('./../../assets/coin.png');
+            background-position: center;
+            background-size: contain;
+            margin-left: -5px;
+        }
+        &.opacity {
+            transition: 0.5s;
+            opacity: 0;
+        }
+    }
+    &.none {
+        display: none;
     }
 }
 
