--- a/src/components/auth/register/style.scss
+++ b/src/components/auth/register/style.scss
@@ -96,7 +96,9 @@
             background-image: url('../../../assets/closee.svg');
             background-size: contain;
             transition: 0.2s;
+            opacity: 0.5;
             &.active {
+                opacity: 1;
                 background-image: url('../../../assets/opene.svg');
             }
         }
@@ -148,6 +150,55 @@
             width: 100%;
             color: rgb(255, 99, 99);
             text-align: center;
+        }
+    }
+    @media (max-width: 600px) {
+        padding-top: 170px;
+        width: 320px;
+        >.boxlogin {
+            top: 15px;
+            left: 25px;
+            height: 140px;
+            width: 270px;
+            .mlogin {
+                font-size: 44px;
+            }
+            .loginmess {
+                font-size: 20px;
+            }
+        }
+        >.input {
+            width: 270px;
+            margin-bottom: 20px;
+            &:nth-last-child(2) {
+                margin-bottom: 20px;
+            }
+        }
+        >.flexboxx {
+            width: 270px;
+            span {
+                font-size: 20px;
+            }
+        }
+    }
+    @media (max-width: 300px) {
+        padding-top: 170px;
+        width: 260px;
+        >.boxlogin {
+            top: 15px;
+            left: 25px;
+            height: 140px;
+            width: 220px;
+        }
+        >.input {
+            width: 220px;
+            margin-bottom: 20px;
+            &:nth-last-child(2) {
+                margin-bottom: 20px;
+            }
+        }
+        >.flexboxx {
+            width: 220px;
         }
     }
 }
