--- a/src/components/mainui/style.scss
+++ b/src/components/mainui/style.scss
@@ -1,16 +1,16 @@
 .mainui {
+    user-select: none;
     position: fixed;
     top: 0;
     height: 0px;
     width: 100%;
-    transform: translateY(300px);
+    transform: translateY(-300px);
     transition: 0.7s;
     z-index: 10;
     .left {
         position: absolute;
         top: 10px;
         right: 10px;
-        height: 160px;
         display: flex;
         flex-direction: column;
         align-items: flex-end;
