--- a/src/components/auth/login/style.scss
+++ b/src/components/auth/login/style.scss
@@ -152,6 +152,13 @@
             text-align: center;
         }
     }
+    @media (max-width: 900px) {
+        >.flexboxx {
+            span {
+                font-size: 18px;
+            }
+        }
+    }
     @media (max-width: 600px) {
         padding-top: 130px;
         width: 320px;
