--- a/src/components/mainui/style.scss
+++ b/src/components/mainui/style.scss
@@ -16,19 +16,20 @@
         align-items: flex-end;
         >.name {
             z-index: 10;
-            height: 60px;
-            background-color: #2E2E2E;
-            border-radius: 35px;
-            line-height: 60px;
-            padding-left: 60px;
-            padding-right: 15px;
+            height: 40px;
+            background-color: #ffffff;
+            border-radius: 20px;
+            line-height: 40px;
+            padding-left: 20px;
+            padding-right: 20px;
             text-align: center;
             font-family: 'Inter';
             font-style: normal;
-            font-weight: 400;
+            font-weight: 600;
             font-size: 20px;
             margin-bottom: 10px;
             box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
+            color: #000;
             >.avatar {
                 position: absolute;
                 top: 10px;
